# fastapi-prometheus-lite

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
fastapi_prometheus_lite/: __init__.py  instrumentor.py  metrics.py  middleware.py  route_patcher.py  starlette_patcher.py  types.py  utils.py
fastapi_prometheus_lite/collectors/: __init__.py  base.py  live_collectors.py  post_collectors.py  typed_collector_bases.py  typed_live_collector_bases.py
fastapi_prometheus_lite/metrics/: __init__.py  base.py  live_metrics.py  post_metrics.py  typed_live_metric_bases.py  typed_metric_bases.py
tests/: test_collectors.py  test_metrics.py  test_route_patch.py  test_typed_collectors.py  test_typed_metric.py  utils.py
tests/test_fastapi_app/: test_simple_api_routes.py
