[project]
name = "fastapi-prometheus-lite"
version = "0.2.2"
description = "A minimal and fast Prometheus middleware for FastAPI"
authors = [
    { name = "Ludovico Conti", email = "" },
    { name = "Riccardo Tocchini", email = "" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["fastapi", "prometheus", "metrics", "monitoring", "middleware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Topic :: System :: Monitoring"
]

dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "starlette"
]

[project.urls]
Homepage = "https://github.com/luzzodev/fastapi-prometheus-lite"
Repository = "https://github.com/luzzodev/fastapi-prometheus-lite"
Issues = "https://github.com/luzzodev/fastapi-prometheus-lite/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["fastapi_prometheus_lite"]
exclude = []

[tool.hatch.build.targets.wheel]
include = ["fastapi_prometheus_lite"]
exclude = []

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    #"E",  # pycodestyle errors
   # "W",  # pycodestyle warnings
    #"F",  # pyflakes
    "I",  # isort
    #"B",  # flake8-bugbear
    #"C",  # flake8-comprehensions
   # "UP",  # pyupgrade
    "C408",
    "F401",
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I001"]


[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "tests",
    "fastapi_prometheus_lite"
]
context = '${CONTEXT}'

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true